<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn">
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
    <LinearLayout
        android:id="@+id/layout_sign_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_sign"
        android:orientation="vertical"
        android:padding="8dp">
        <TextView
            android:id="@string/text_view_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:layout_marginStart="16dp" tools:targetApi="jelly_bean" />

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/nom_prefix_of_email_google"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@string/text_view_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/password"
            android:layout_marginStart="16dp" tools:targetApi="jelly_bean" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="250dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/login_btn"
            android:background="@drawable/my_button"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_sign_1"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/note_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/no_account_yet"
            android:fontFamily="" tools:targetApi="jelly_bean" />

        <CheckedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/note_sign"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/here"
            android:textColor="#1403fc"
            android:id="@+id/here_checked_text_view"/>
        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="250dp"
            android:layout_height="36dp"
            android:layout_below="@id/here_checked_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:visibility="visible"
            />
        </RelativeLayout>
  </RelativeLayout>
</LinearLayout>