<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".utilities.EntryPasswordActivity"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="#47b3e6">
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/dimen_text_vingt"
        />
    <EditText
        android:id="@+id/text_enter_pass1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/password2"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="@dimen/dimen_text_vingt"/>
        <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/enter_pass_btn"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/enter"
        android:textSize="@dimen/dimen_text_vingt" android:background="#8c63d7"/>
</LinearLayout>
